--- a/style.css
+++ b/style.css
@@ -77,6 +77,18 @@ body > .container {
 	margin: 0 20px 0 0;
 }
 
+.legend {
+	display: block;
+	width: 100%;
+	padding: 0;
+	margin-bottom: 20px;
+	font-size: 21px;
+	line-height: 40px;
+	color: #333333;
+	border: 0;
+	border-bottom: 1px solid #e5e5e5;
+}
+
 .block {
 	display: block;
 }
@@ -129,8 +141,12 @@ article.page {
 	word-wrap: break-word;
 }
 
-.post-password-form legend {
+.post-password-legend {
 	font-size: inherit;
+	padding-bottom:10px;
+	border-bottom:1px solid #e5e5e5;
+	line-height:40px;
+	margin-bottom:20px;
 }
 
 .entry-content .twitter-tweet-rendered {
